welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: error: not found: value <
    case Math.abs(n)<90 => false
                    ^nearHundred:3: error: value abs is not a case class, nor does it have an unapply/unapplySeq member
    case Math.abs(n)<90 => false
              ^nearHundred:4: error: not found: value <
    case Math.abs(n)<111 => true
                    ^nearHundred:4: error: value abs is not a case class, nor does it have an unapply/unapplySeq member
    case Math.abs(n)<111 => true
              ^nearHundred:5: error: not found: value <
    case Math.abs(n)<190 => false
                    ^nearHundred:5: error: value abs is not a case class, nor does it have an unapply/unapplySeq member
    case Math.abs(n)<190 => false
              ^nearHundred:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    case Math.abs(n)<190 => false
                            ^nearHundred:6: error: missing parameter type
    _ => true
    ^