welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  n match {
    case Math.abs(n)<90 => false
    case Math.abs(n)<111 => true
    case Math.abs(n)<190 => false
    _ => true
  }
}